loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:8: error: reassignment to val
        cote = cote+1
             ^LoopCourse:12: error: reassignment to val
    quartdetour = quartdetour + 1
                ^