loopfor.LoopCourse.scala.code
var tour = 0
var cote = 0


for (quartdetour <- 1 to 40) {
    for (cote <- 1 to 8) {
       avance()
      	cote = cote+1
    }

    gauche()
  	quartdetour = quartdetour + 1
}